# fluxion

./: LICENSE  README.md  cli.py  pyproject.toml  test_fluxion.py
examples/: circle_demo.py  fluxion_test.py  projectile_2D_demo.py  projectile_demo.py  wave_demo.py
examples/media/videos/fluxion_test/1080p60/partial_movie_files/FluxionTest/: partial_movie_file_list.txt
fluxion/: __init__.py  animation.py  api.py  config.py  exporter.py  physics.py  scene3d.py  utils.py
fluxion/core/: animation.py  scene.py  timeline.py
fluxion/objects/: axes3d.py  circle.py  curve3d.py  graph3d.py  latex.py  shape.py  text.py
fluxion/render/: exporter.py  renderer.py
fluxion/utils/: colors.py  easing.py
tests/: test_basic.py  test_smoke.py
